# YouTubeNoteBooks

./: .gitignore  README.md
backend/: chatBot.py  historyChatBot.py  historyChatBotWithStorage.py  main.py  mongoSample.py  timeStampDecider.py  utils.py  vector_db.py
backend copy/app/core/: dependencies.py  settings.py
backend copy/app/repositories/: mongodb_repository.py
backend copy/results/: video_description.json
backend/Functions/: chatBot.py  genai.py  historyChatBot.py  historyChatBotWithStorage.py  timeStampDecider.py
backend/Tests/: check_mongoVectorDB.py  check_vertexai.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Demo.tsx
oldfiles/: genai.py  main.py
structured_backend/: pyproject.toml  requirements.txt
structured_backend/app/: main.py
structured_backend/app/core/: dependencies.py  embeddings.py  schema.py
structured_backend/app/repositories/: chat_mongodb_repository.py  mongodb_repository.py  notebook_mongodb_repository.py  user_mongodb_repository.py  vector_repository.py  video_mongodb_repository.py
structured_backend/app/routers/: auth_router.py  chat_router.py  notebook_router.py  user_router.py  video_router.py
structured_backend/app/services/: chat_rag_service.py  genai_service.py  notebook_service.py  old_genai_service.py  persistant_chat_rag_service.py  text_service.py  timestamp_service.py  transcript_processing_service.py  vector_service.py  youtube_service.py
structured_backend/app/test/: chat_test.py  timestamp_test.py  vector_test.py
(+24 files in other folders)
